syntax = "proto3";

package extras.ex3;

option java_package = "uk.me.uohiro.protobuf.model.extras.ex3";
option java_outer_classname = "SayHelloAPIProto";
option java_multiple_files = true;
option optimize_for = SPEED;

service StreamingGreeter {
	rpc SayHelloStreaming (stream HelloRequest) returns (stream HelloResponse);
}

message HelloRequest {
	string name = 1;
}

message HelloResponse {
	string message = 1;
}
